--- a/desafios/d012/estilo/style.css
+++ b/desafios/d012/estilo/style.css
@@ -1,5 +1,15 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Passion+One:wght@400;700;900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+:root{
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion One', cursive;
+    --fonte3: 'Sriracha', cursive;
+}
+
 *{
     padding: 0px;
     margin: 0px;
@@ -8,6 +18,7 @@
 html,body{
     background-color: darkgray;
     min-height: 100vh;
+    font-family: var(--fonte1);
 
 }
 
@@ -20,6 +31,8 @@ header{
 header>h1{
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--fonte2);
+    font-size: 10vw;
 }
 
 header>p{
@@ -41,6 +54,8 @@ section{
     padding-bottom: 30vh;
     padding-left: 30px;
     line-height: 2em;
+    font-family: var(--fonte3);
+    font-size: 3.5vw;
 }
 
 section.imagem{
@@ -50,7 +65,8 @@ section.imagem{
 
 section.imagem > p{
     background-color: rgba(0, 0, 0, 0.342);
-    max-width: 500px;
+    display: inline-block;
+    padding: 5px;
     
 }
 
