--- a/desafios/d012/estilo/style.css
+++ b/desafios/d012/estilo/style.css
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Passion+One:wght@400;700;900&display=swap');
 
 @import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
-
+ 
 :root{
     --fonte1: Verdana, Geneva, Tahoma, sans-serif;
     --fonte2: 'Passion One', cursive;
@@ -57,22 +57,38 @@ section{
     font-family: var(--fonte3);
     font-size: 3.5vw;
 }
-
+section > p{
+    padding-bottom: 1em;
+}
 section.imagem{
     background-color: rgb(34, 33, 33);
     color: white;
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem > p{
     background-color: rgba(0, 0, 0, 0.342);
     display: inline-block;
     padding: 5px;
+    text-shadow: 3px 2px 1px black;
     
 }
 
 section.normal{
     background-color: white;
     color: black;
+}
+
+section#img01{
+    background-image: url("../imagens/background001.jpg");
+    bottom: center right;
+    
+}
+
+section#img02{
+    background-image: url("../imagens/background002.jpg");
+    background-position: bottom right;
 }
 
 footer{
